fixed collapsing issue, need to add hackshack

--- a/css/custom.css
+++ b/css/custom.css
@@ -719,7 +719,7 @@ width: 600px;
   font-size: 1.2em;
 }
 .collapse.in {
-    display: inline-table !important;
+    /*display: inline-table !important;*/ 
 }
 @media (max-width: 700px) {
   .form-container, .conf-container {
@@ -759,20 +759,22 @@ width: 600px;
     font-size: 0.8em;
     
   }
+  .questions .question .text{
+      margin-left: 0px;
+  }
+.questions .question .text .cert-btn {
+    font-size: 1.5em;
+}
 .questions .question button{
-      font-size: 1.9em;
+      font-size: 1.65em;
   }
   .questions {
     padding-bottom: 100px;
   }
-  .questions .question .text h4{
-      
-  }
   .questions .question .certifications img{
-      width: 100%;
-      
-      
+      width: 100%;   
   }
+
 }
 
 @media (min-width:700px) {
